--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: pod_router
 description: "A Flutter navigation package that combines go_router with Riverpod for clean, testable routing with authentication support."
-version: 0.0.1+2
-# homepage: https://github.com/1farz1/pod_router
-# repository: https://github.com/yourusername/pod_router
+version: 0.0.1+3
+homepage: https://github.com/1farz1/pod_router
+repository: https://github.com/1farz1/pod_router
 # issue_tracker: https://github.com/yourusername/pod_router/issues
 # documentation: https://github.com/yourusername/pod_router#readme
 license: MIT
