adding disposing of valueNotifiers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
 name: pod_router
 description: "A Flutter navigation package that combines go_router with Riverpod for clean, testable routing with authentication support."
 version: 0.0.1+4
-homepage: https://github.com/1farz1/pod_router
-repository: https://github.com/1farz1/pod_router
+# homepage: https://github.com/1farz1/pod_router
+repository: https://github.com/1farz1/pod_router/tree/main
+issue_tracker: https://github.com/1farz1/pod_router/issues
+documentation: https://github.com/1farz1/pod_router/blob/main/README.md
 # issue_tracker: https://github.com/yourusername/pod_router/issues
 # documentation: https://github.com/yourusername/pod_router#readme
 license: MIT
